--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 <table>
-<tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Smoke test Suite</th></tr>
-<tr><td><a href="#t0">Ecommsmoke suite</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">1,613</td><td></td><td></td></tr>
+<tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
+<tr><th colspan="7">Smoke test Suite</th></tr>
+<tr><td><a href="#t0">Ecommsmoke suite</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">3</td><td class="num">1,397</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Smoke test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Ecommsmoke suite &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">ecomm.amazon.testcases.Login_smoketest</td><td><a href="#m0">tc_01_amazonsearch</a></td><td rowspan="1">1706955338758</td><td rowspan="1">1577</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Smoke test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Ecommsmoke suite &#8212; failed</th></tr><tr class="failedeven"><td rowspan="3">ecomm.amazon.testcases.Login_smoketest</td><td><a href="#m0">New_registration</a></td><td rowspan="1">1707173776086</td><td rowspan="1">42</td></tr><tr class="failedeven"><td><a href="#m1">login_Signin</a></td><td rowspan="1">1707173776064</td><td rowspan="1">19</td></tr><tr class="failedeven"><td><a href="#m2">tc_01_amazonsearch</a></td><td rowspan="1">1707173774749</td><td rowspan="1">1305</td></tr></tbody>
 </table>
-<h2>Ecommsmoke suite</h2><h3 id="m0">ecomm.amazon.testcases.Login_smoketest#tc_01_amazonsearch</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>chrome</td><td>https://www.amazon.co.uk/</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.NoSuchMethodError: &apos;void com.google.common.base.Preconditions.checkState(boolean, java.lang.String, java.lang.Object, java.lang.Object, java.lang.Object)&apos;
+<h2>Ecommsmoke suite</h2><h3 id="m0">ecomm.amazon.testcases.Login_smoketest#New_registration</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>chrome</td><td>https://www.amazon.co.uk/</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.NoSuchMethodError: &apos;void com.google.common.base.Preconditions.checkState(boolean, java.lang.String, java.lang.Object, java.lang.Object, java.lang.Object)&apos;
 	at org.openqa.selenium.remote.service.DriverService.findExecutable(DriverService.java:134)
 	at org.openqa.selenium.chrome.ChromeDriverService.access$000(ChromeDriverService.java:35)
 	at org.openqa.selenium.chrome.ChromeDriverService$Builder.findDefaultExecutable(ChromeDriverService.java:159)
@@ -21,8 +21,27 @@
 	at org.openqa.selenium.chrome.ChromeDriverService.createDefaultService(ChromeDriverService.java:94)
 	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:123)
 	at ecomm.amazon.utils.Browsermanager.getDriver(Browsermanager.java:17)
-	at ecomm.amazon.testcases.Login_smoketest.tc_01_amazonsearch(Login_smoketest.java:19)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	at ecomm.amazon.testcases.Login_smoketest.New_registration(Login_smoketest.java:54)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">ecomm.amazon.testcases.Login_smoketest#login_Signin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>chrome</td><td>https://www.amazon.co.uk/</td><td>user</td><td>Password1</td></tr><tr><th colspan="4">Exception</th></tr><tr><td colspan="4"><div class="stacktrace">java.lang.NoSuchMethodError: &apos;void com.google.common.base.Preconditions.checkState(boolean, java.lang.String, java.lang.Object, java.lang.Object, java.lang.Object)&apos;
+	at org.openqa.selenium.remote.service.DriverService.findExecutable(DriverService.java:134)
+	at org.openqa.selenium.chrome.ChromeDriverService.access$000(ChromeDriverService.java:35)
+	at org.openqa.selenium.chrome.ChromeDriverService$Builder.findDefaultExecutable(ChromeDriverService.java:159)
+	at org.openqa.selenium.remote.service.DriverService$Builder.build(DriverService.java:355)
+	at org.openqa.selenium.chrome.ChromeDriverService.createDefaultService(ChromeDriverService.java:94)
+	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:123)
+	at ecomm.amazon.utils.Browsermanager.getDriver(Browsermanager.java:17)
+	at ecomm.amazon.testcases.Login_smoketest.login_Signin(Login_smoketest.java:35)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">ecomm.amazon.testcases.Login_smoketest#tc_01_amazonsearch</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>chrome</td><td>https://www.amazon.co.uk/</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.NoSuchMethodError: &apos;void com.google.common.base.Preconditions.checkState(boolean, java.lang.String, java.lang.Object, java.lang.Object, java.lang.Object)&apos;
+	at org.openqa.selenium.remote.service.DriverService.findExecutable(DriverService.java:134)
+	at org.openqa.selenium.chrome.ChromeDriverService.access$000(ChromeDriverService.java:35)
+	at org.openqa.selenium.chrome.ChromeDriverService$Builder.findDefaultExecutable(ChromeDriverService.java:159)
+	at org.openqa.selenium.remote.service.DriverService$Builder.build(DriverService.java:355)
+	at org.openqa.selenium.chrome.ChromeDriverService.createDefaultService(ChromeDriverService.java:94)
+	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:123)
+	at ecomm.amazon.utils.Browsermanager.getDriver(Browsermanager.java:17)
+	at ecomm.amazon.testcases.Login_smoketest.tc_01_amazonsearch(Login_smoketest.java:21)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
