--- a/test-output/index.html
+++ b/test-output/index.html
@@ -6,7 +6,7 @@
   <title>TestNG reports</title>
 
     <link type="text/css" href="testng-reports.css" rel="stylesheet" />
-    <script type="text/javascript" src="jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="testng-reports.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type='text/javascript'>
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite, 3 failed tests</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method, 1 failed,   </span>
+                    <span class="method-stats">3 methods, 3 failed,   </span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -100,6 +100,16 @@
                       <a href="#" panel-name="suite-Smoke_test_Suite" class="show-methods failed suite-Smoke_test_Suite"> (show)</a> <!-- show-methods failed suite-Smoke_test_Suite -->
                     </span>
                     <div class="method-list-content failed suite-Smoke_test_Suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Smoke_test_Suite" title="ecomm.amazon.testcases.Login_smoketest" class="method navigator-link" hash-for-method="New_registration(chrome, https://www.amazon.co.uk/)">New_registration(chrome, https://www.amazon.co.uk/)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Smoke_test_Suite" title="ecomm.amazon.testcases.Login_smoketest" class="method navigator-link" hash-for-method="login_Signin(chrome, https://www.amazon.co.uk/, user, Password1)">login_Signin(chrome, https://www.amazon.co.uk/, user, Password1)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="failed.png" width="3%"/>
                         <a href="#" panel-name="suite-Smoke_test_Suite" title="ecomm.amazon.testcases.Login_smoketest" class="method navigator-link" hash-for-method="tc_01_amazonsearch(chrome, https://www.amazon.co.uk/)">tc_01_amazonsearch(chrome, https://www.amazon.co.uk/)</a> <!-- method navigator-link -->
@@ -125,6 +135,44 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="New_registration(chrome, https://www.amazon.co.uk/)">
+                  </a> <!-- New_registration(chrome, https://www.amazon.co.uk/) -->
+                  <span class="method-name">New_registration</span>
+                  <span class="parameters">(chrome, https://www.amazon.co.uk/)</span>
+                  <div class="stack-trace">java.lang.NoSuchMethodError: &apos;void com.google.common.base.Preconditions.checkState(boolean, java.lang.String, java.lang.Object, java.lang.Object, java.lang.Object)&apos;
+	at org.openqa.selenium.remote.service.DriverService.findExecutable(DriverService.java:134)
+	at org.openqa.selenium.chrome.ChromeDriverService.access$000(ChromeDriverService.java:35)
+	at org.openqa.selenium.chrome.ChromeDriverService$Builder.findDefaultExecutable(ChromeDriverService.java:159)
+	at org.openqa.selenium.remote.service.DriverService$Builder.build(DriverService.java:355)
+	at org.openqa.selenium.chrome.ChromeDriverService.createDefaultService(ChromeDriverService.java:94)
+	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:123)
+	at ecomm.amazon.utils.Browsermanager.getDriver(Browsermanager.java:17)
+	at ecomm.amazon.testcases.Login_smoketest.New_registration(Login_smoketest.java:54)
+... Removed 25 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="login_Signin(chrome, https://www.amazon.co.uk/, user, Password1)">
+                  </a> <!-- login_Signin(chrome, https://www.amazon.co.uk/, user, Password1) -->
+                  <span class="method-name">login_Signin</span>
+                  <span class="parameters">(chrome, https://www.amazon.co.uk/, user, Password1)</span>
+                  <div class="stack-trace">java.lang.NoSuchMethodError: &apos;void com.google.common.base.Preconditions.checkState(boolean, java.lang.String, java.lang.Object, java.lang.Object, java.lang.Object)&apos;
+	at org.openqa.selenium.remote.service.DriverService.findExecutable(DriverService.java:134)
+	at org.openqa.selenium.chrome.ChromeDriverService.access$000(ChromeDriverService.java:35)
+	at org.openqa.selenium.chrome.ChromeDriverService$Builder.findDefaultExecutable(ChromeDriverService.java:159)
+	at org.openqa.selenium.remote.service.DriverService$Builder.build(DriverService.java:355)
+	at org.openqa.selenium.chrome.ChromeDriverService.createDefaultService(ChromeDriverService.java:94)
+	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:123)
+	at ecomm.amazon.utils.Browsermanager.getDriver(Browsermanager.java:17)
+	at ecomm.amazon.testcases.Login_smoketest.login_Signin(Login_smoketest.java:35)
+... Removed 25 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="tc_01_amazonsearch(chrome, https://www.amazon.co.uk/)">
                   </a> <!-- tc_01_amazonsearch(chrome, https://www.amazon.co.uk/) -->
                   <span class="method-name">tc_01_amazonsearch</span>
@@ -137,9 +185,8 @@
 	at org.openqa.selenium.chrome.ChromeDriverService.createDefaultService(ChromeDriverService.java:94)
 	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:123)
 	at ecomm.amazon.utils.Browsermanager.getDriver(Browsermanager.java:17)
-	at ecomm.amazon.testcases.Login_smoketest.tc_01_amazonsearch(Login_smoketest.java:19)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames
+	at ecomm.amazon.testcases.Login_smoketest.tc_01_amazonsearch(Login_smoketest.java:21)
+... Removed 25 stack frames
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
@@ -153,11 +200,13 @@
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
-&lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
+&lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Smoke test Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Ecommsmoke suite&quot;&gt;
+    &lt;parameter name=&quot;password&quot; value=&quot;Password1&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;parameter name=&quot;url&quot; value=&quot;https://www.amazon.co.uk/&quot;/&gt;
+    &lt;parameter name=&quot;username&quot; value=&quot;user&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;ecomm.amazon.testcases.Login_smoketest&quot;/&gt;
     &lt;/classes&gt;
@@ -199,11 +248,19 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'tc_01_amazonsearch')
 data.setCell(0, 2, 'ecomm.amazon.testcases.Login_smoketest')
-data.setCell(0, 3, 1577);
+data.setCell(0, 3, 1305);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'New_registration')
+data.setCell(1, 2, 'ecomm.amazon.testcases.Login_smoketest')
+data.setCell(1, 3, 42);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'login_Signin')
+data.setCell(2, 2, 'ecomm.amazon.testcases.Login_smoketest')
+data.setCell(2, 3, 19);
 window.suiteTableData['Smoke_test_Suite']= { tableData: data, tableDiv: 'times-div-Smoke_test_Suite'}
 return data;
 }
@@ -240,6 +297,18 @@ return data;
                 </img>
                 <span class="method-name">tc_01_amazonsearch(chrome, https://www.amazon.co.uk/)</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">login_Signin(chrome, https://www.amazon.co.uk/, user, Password1)</span>
+                <span class="method-start">1315 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">New_registration(chrome, https://www.amazon.co.uk/)</span>
+                <span class="method-start">1337 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
