--- a/test-output/old/Smoke test Suite/methods.html
+++ b/test-output/old/Smoke test Suite/methods.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Smoke test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6c8f8d">  <td>24/02/03 10:15:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_smoketest.tc_01_amazonsearch(java.lang.String, java.lang.String)[pri:0, instance:ecomm.amazon.testcases.Login_smoketest@4cc8eb05]">tc_01_amazonsearch</td> 
-  <td>main@710190911</td>   <td></td> </tr>
+<tr bgcolor="66a78c">  <td>24/02/05 22:56:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_smoketest.tc_01_amazonsearch(java.lang.String, java.lang.String)[pri:1, instance:ecomm.amazon.testcases.Login_smoketest@d771cc9]">tc_01_amazonsearch</td> 
+  <td>main@985324122</td>   <td></td> </tr>
+<tr bgcolor="66a78c">  <td>24/02/05 22:56:16</td>   <td>1315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_smoketest.login_Signin(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:ecomm.amazon.testcases.Login_smoketest@d771cc9]">login_Signin</td> 
+  <td>main@985324122</td>   <td></td> </tr>
+<tr bgcolor="66a78c">  <td>24/02/05 22:56:16</td>   <td>1337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_smoketest.New_registration(java.lang.String, java.lang.String)[pri:3, instance:ecomm.amazon.testcases.Login_smoketest@d771cc9]">New_registration</td> 
+  <td>main@985324122</td>   <td></td> </tr>
 </table>
